2nd_hw/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-postgresql-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otus-postgresql-api
            port:
              number: 9000
      - path: /grafana/(.*)
        pathType: Prefix
        backend:
          service:
            name: otus-postgresql-api-grafana
            port:
              number: 80
